plugins/warp/src/snapshots/warp_ninja__tests__snapshot__fptostr.snap
---
source: plugins/warp/src/lib.rs
expression: functions
---
[
    FunctionGUID {
        guid: 9d4dba66-7106-5215-8e64-a47279f67dfe,
    },
]
